[package]
name = "wireproxy-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.10"
clap = { version = "4.6.0", features = ["derive"] }
fast-socks5 = "1.0.0"
gotatun = { path = "vendor/gotatun" }
parking_lot = "0.12"
rand = "0.8"
rust-ini = { version = "0.21.3", features = ["inline-comment"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp"] }
thiserror = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zerocopy = { version = "0.8", features = ["std"] }
